frontend/tests/cases/negative/interfaces/scope/notInScopeInterfaceForInstance.gr
-- use of an interface that hasn't been defined
instance Foo Bool
